--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,13 @@ version: '3.8'
 
 services:
   react-app:
-    build: .
+    build: 
+      dockerfile: Dockerfile
+      args:
+       - VITE_APP_BACKEND_ADDRESS=localhost:8080
+       - VITE_APP_BACKEND_IMAGE=localhost:8082
     ports:
       - "5000:5000"
+networks:
+  app-network:
+    external: true
