--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_APP_BACKEND_ADDRESS = localhost:8080
-VITE_APP_BACKEND_IMAGE = localhost:8082
+VITE_APP_BACKEND_ADDRESS = localhost
+VITE_APP_BACKEND_IMAGE = localhost
