--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_APP_BACKEND_ADDRESS = localhost:8080
-VITE_APP_BACKEND_IMAGE = localhost:8082
-VITE_APP_ADMIN_ADDRESS = localhost:5001
+VITE_APP_BACKEND_ADDRESS = localhost
+VITE_APP_BACKEND_IMAGE = localhost
+VITE_APP_ADMIN_ADDRESS = localhost
